color contrast correction

--- a/styles/base.css
+++ b/styles/base.css
@@ -16,7 +16,7 @@ header {
 .links {
     display: flex;
     justify-content: space-evenly;
-    background-color: rgb(73, 72, 72);
+    background-color: rgb(40, 39, 39);
     padding: 10px;
 }
 
